--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Actividad_de_titulo"
         tools:targetApi="31">
         <activity
+            android:name=".DisplayDataActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddMotorActivity"
             android:exported="false" />
         <activity
